syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest{
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 prime_number = 1;
}

service CalculatorService {
    //Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
    // Server Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) 
    returns (stream PrimeNumberDecompositionResponse) {};

}